apps/glance/service.yaml
apiVersion: v1
kind: Service
metadata:
    labels:
        app: glance 
    name: glance
    namespace: homelab
spec:
    ports:
        - name: http
          port: 80
          protocol: TCP
          targetPort: 8080
    selector:
        app: glance
