apps/glance/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: glance-ingress
    namespace: homelab
    annotations:
        glance/icon: di:glance
        glance/name: "Glance"
        glance/url: https://glance.realtong.cn
        nginx.ingress.kubernetes.io/ssl-redirect: "true"
        nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
        nginx.ingress.kubernetes.io/proxy-body-size: "25m"
        nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
        nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
        nginx.ingress.kubernetes.io/upstream-hash-by: "$request_uri"
spec:
    ingressClassName: nginx
    tls:
        - hosts:
              - glance.realtong.cn
    rules:
        - host: glance.realtong.cn
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: glance
                            port:
                                number: 8080
